fix(current-weather): desktop days alignment

--- a/src/components/CurrentWeather/styles.scss
+++ b/src/components/CurrentWeather/styles.scss
@@ -40,6 +40,7 @@
 
     .days {
       display: flex;
+      justify-content: center;
       align-items: center;
       width: 100vw;
       overflow-x: scroll;
